feat: beta readiness — full audit fixes, Sentry, production Docker
Security:
- Admin-guard on POST /api/props (was unprotected)
- Scope check on getSplit and getPropById for group-scoped props
- Configurable CORS via CORS_ALLOWED_ORIGINS env var
- JWT secret/DB password read from env vars in docker-compose
- Catch-all exception handler with Sentry reporting
- @Valid + @Size on profile update fields
- @Future on closesAt in prop DTOs
- AccessDeniedException for non-member invite attempts
- Group membership check on user-submitted group props

Data integrity:
- @Transactional on all PropService read/write methods
- N+1 fix: user resolved once before prop list mapping
- Batch saveAll() in ResolutionService instead of per-vote saves
- PointTransaction audit trail on votes and payouts
- PointTransactionRepository created

Infrastructure:
- Spring Actuator health endpoint (/actuator/health)
- Production Spring profile (application-prod.yml)
- Server port configurable via PORT env var
- Logging default changed from DEBUG to INFO
- Frontend production Docker build (multi-stage nginx)
- nginx.conf with React Router fallback and API proxy
- Sentry integration (frontend + backend)
- Source maps enabled for Sentry stack traces

Schema cleanup:
- V5: drop unused badges/user_badges/is_public
- V6: drop unused prop stat fields
- V7: performance indexes on props and friend_groups
- V8: ON DELETE CASCADE on group_invites FKs
- V9: drop unused prop_submissions table
- Deleted Badge.java entity, removed dead fields from User/Prop

Code quality:
- VoteRequest.choice typed as Vote.Choice (was Prop.Result)
- submitRequest renamed to SubmitRequest (PascalCase)
- JWT parsed once per request instead of 3 times
- Extracted shared utils (sportClasses.js, teams.js)
- Removed dead code (getTierInfo, unused imports)
- Password toggle on Login/Register
- Sidebar logo + text link to dashboard
- Navbar alignment fix